--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -6,6 +6,11 @@
     <h1>Music App</h1>
    
     <p><a href="/Albums" class="btn btn-primary btn-lg">Go to albums &raquo;</a></p>
+
+    <p><a href="/Artist" class="btn btn-primary btn-lg">Go to artists &raquo;</a></p>
+
+    <p><a href="/Genre" class="btn btn-primary btn-lg">Go to genres &raquo;</a></p>
+
 </div>
 
 <div class="row">
