--- a/Views/Artist/Index.cshtml
+++ b/Views/Artist/Index.cshtml
@@ -17,6 +17,9 @@
         <th>
             @Html.DisplayNameFor(model => model.ArtistID)
         </th>
+        <th>
+            @Html.DisplayNameFor(model => model.Bio)
+        </th>
         <th></th>
     </tr>
 
@@ -24,6 +27,9 @@
     <tr>
         <td>
             @Html.DisplayFor(modelItem => item.Name)
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.Bio)
         </td>
 
     </tr>
